# TickQuickly

./: .clang-format  .clangd  .gitignore  .prettierrc  CMakeLists.txt  CMakePresets.json  README.md  elysia-documentation.yaml  index.html  main.cpp  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.cache/clangd/index/: main.cpp.496B0260D2516DB1.idx  task_list_model.cpp.B357BFC7ECD6391B.idx
doc/: task_model.md
qml/: Main.qml
src/: App.tsx  CMakeLists.txt  index.css  main.tsx  resources.qrc
src/api/: CMakeLists.txt  api.cpp  api.h  response.h
src/components/: CreateTask.tsx  TaskDetail.tsx  TaskItem.tsx  TaskList.tsx  TipTap.tsx
src/db/: db.ts  index.ts
src/main/: main.cpp
src/model/: task.h  task_list_model.cpp  task_list_model.h
src/qml/: Main.qml
src/storage/: local_json_task_storage.cpp  local_json_task_storage.h  task_storage.h
src/store/: editing.ts  task.ts
src/sync/: sync_manager.cpp  sync_manager.h
src/types/: task.ts
tests/: CMakeLists.txt  test_task_list_model.cpp
